--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ cryptography==2.8
 idna==2.8
 jwt==0.6.1
 numpy==1.18.1
-opencv-python==4.2.0.32
+opencv-python
 paho-mqtt==1.5.0
 pycparser==2.19
 pydub==0.23.1
